# LL-journal

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  go.mod  go.sum
cmd/ll-journal/: main.go
features/: journal.feature
internal/config/: config.go
internal/git/: git.go
internal/handlers/: handlers.go
internal/journal/: journal.go
internal/migrations/: migrations.go
internal/s3/: s3.go
internal/store/: store.go
migrations/: 001_journal_schema.sql
